--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-ALURAFLIX
+<header>ALURAFLIX</header>
 
-Trailer Oficial | Monster High 2 | Paramount Plus
+<h1>Trailer Oficial | Monster High 2 | Paramount Plus</h1>
+<p>#monster high</p>
